// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddedCities are displayed correctly There are cities in the favorites 1`] = `
<div>
  <div
    className="CitiesPanel"
  >
    <div
      className="CitiesText"
    >
      Favorites
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="CitiesInput"
        name="cityName"
        placeholder="City name"
        required={true}
        type="text"
      />
      <input
        className="CitiesButton"
        type="submit"
        value="Add city"
      />
    </form>
  </div>
  <div
    className="weather"
  >
    <div
      className="WeatherBlock"
    >
      <div
        className="City"
      >
        London
      </div>
      <div
        className="leftWeather"
      >
        <img
          className="Icon"
          src="https://openweathermap.org/img/wn/09d.png"
        />
        <div
          className="Temp"
        >
          7
           °C
        </div>
        <button
          className="button"
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
      <div
        className="rightWeather"
      >
        <div
          className="Pressure"
        >
          Pressure: 
          1012
           hPa
        </div>
        <div
          className="Humidity"
        >
          Humidity: 
          81
          %
        </div>
        <div
          className="Clouds"
        >
          Clouds: 
          light intensity drizzle
        </div>
        <div
          className="Wind"
        >
          Wind: 
          4.1
           m/s
        </div>
        <div
          className="Coords"
        >
          Coordinates: [
          -0.13
          , 
          51.51
          ]
        </div>
      </div>
    </div>
    <div
      className="WeatherBlock"
    >
      <div
        className="City"
      >
        London
      </div>
      <div
        className="leftWeather"
      >
        <img
          className="Icon"
          src="https://openweathermap.org/img/wn/09d.png"
        />
        <div
          className="Temp"
        >
          7
           °C
        </div>
        <button
          className="button"
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
      <div
        className="rightWeather"
      >
        <div
          className="Pressure"
        >
          Pressure: 
          1012
           hPa
        </div>
        <div
          className="Humidity"
        >
          Humidity: 
          81
          %
        </div>
        <div
          className="Clouds"
        >
          Clouds: 
          light intensity drizzle
        </div>
        <div
          className="Wind"
        >
          Wind: 
          4.1
           m/s
        </div>
        <div
          className="Coords"
        >
          Coordinates: [
          -0.13
          , 
          51.51
          ]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddedCities are displayed correctly There are no cities in the favorites 1`] = `
<div>
  <div
    className="CitiesPanel"
  >
    <div
      className="CitiesText"
    >
      Favorites
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="CitiesInput"
        name="cityName"
        placeholder="City name"
        required={true}
        type="text"
      />
      <input
        className="CitiesButton"
        type="submit"
        value="Add city"
      />
    </form>
  </div>
  <div
    className="weather"
  />
</div>
`;

exports[`Error There are cities in the favorites 1`] = `
<div>
  <div
    className="CitiesPanel"
  >
    <div
      className="CitiesText"
    >
      Favorites
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="CitiesInput"
        name="cityName"
        placeholder="City name"
        required={true}
        type="text"
      />
      <input
        className="CitiesButton"
        type="submit"
        value="Add city"
      />
    </form>
  </div>
  <div
    className="error"
  >
    Error: 
    Something wrong
  </div>
  <div
    className="weather"
  >
    <div
      className="WeatherBlock"
    >
      <div
        className="City"
      >
        London
      </div>
      <div
        className="leftWeather"
      >
        <img
          className="Icon"
          src="https://openweathermap.org/img/wn/09d.png"
        />
        <div
          className="Temp"
        >
          7
           °C
        </div>
        <button
          className="button"
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
      <div
        className="rightWeather"
      >
        <div
          className="Pressure"
        >
          Pressure: 
          1012
           hPa
        </div>
        <div
          className="Humidity"
        >
          Humidity: 
          81
          %
        </div>
        <div
          className="Clouds"
        >
          Clouds: 
          light intensity drizzle
        </div>
        <div
          className="Wind"
        >
          Wind: 
          4.1
           m/s
        </div>
        <div
          className="Coords"
        >
          Coordinates: [
          -0.13
          , 
          51.51
          ]
        </div>
      </div>
    </div>
    <div
      className="WeatherBlock"
    >
      <div
        className="City"
      >
        London
      </div>
      <div
        className="leftWeather"
      >
        <img
          className="Icon"
          src="https://openweathermap.org/img/wn/09d.png"
        />
        <div
          className="Temp"
        >
          7
           °C
        </div>
        <button
          className="button"
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
      <div
        className="rightWeather"
      >
        <div
          className="Pressure"
        >
          Pressure: 
          1012
           hPa
        </div>
        <div
          className="Humidity"
        >
          Humidity: 
          81
          %
        </div>
        <div
          className="Clouds"
        >
          Clouds: 
          light intensity drizzle
        </div>
        <div
          className="Wind"
        >
          Wind: 
          4.1
           m/s
        </div>
        <div
          className="Coords"
        >
          Coordinates: [
          -0.13
          , 
          51.51
          ]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Error There are no cities in the favorites 1`] = `
<div>
  <div
    className="CitiesPanel"
  >
    <div
      className="CitiesText"
    >
      Favorites
    </div>
    <form
      onSubmit={[Function]}
    >
      <input
        className="CitiesInput"
        name="cityName"
        placeholder="City name"
        required={true}
        type="text"
      />
      <input
        className="CitiesButton"
        type="submit"
        value="Add city"
      />
    </form>
  </div>
  <div
    className="error"
  >
    Error: 
    Something wrong
  </div>
  <div
    className="weather"
  />
</div>
`;
